--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 <body>
     <header id="main-header">
         <h1>My Projects & Work</h1>
-        <button id="back-btn" class="back-button">← Back to Home</button>
+        <button id="back-btn" class="back-button" onclick="window.location.href='index.html'">← Back to Home</button>
     </header>
     
     <div id="honeycomb-container">
