--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Vatsal Goyal</title>
+    <title>Vatsal's Portfolio - Projects</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>">
     <link rel="stylesheet" href="projects-styles.css">
 </head>
 <body>
@@ -22,6 +23,141 @@
         </div>
     </div>
 
+    <div id="mobile-content">
+        <div class="mobile-content-item" data-github="https://github.com/masterunix/JobNest-v1" data-visit="Will be deployed soon">
+            <div class="mobile-content-title">💼 Job Nest</div>
+            <div class="mobile-content-desc">A comprehensive platform for job seekers and employers with advanced matching algorithms</div>
+            <div class="mobile-content-tech">MERN Stack</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link" data-type="github">GitHub</span>
+                <span class="mobile-link disabled" data-type="visit">Will be deployed soon</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-github="Available on request" data-visit="450houseofsourdough.com">
+            <div class="mobile-content-title">🍞 450 House of Sourdough</div>
+            <div class="mobile-content-desc">Elegant website for artisanal sourdough bakery with e-commerce integration</div>
+            <div class="mobile-content-tech">Modern Web Stack</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link disabled" data-type="github">Available on request</span>
+                <span class="mobile-link" data-type="visit">Visit Site</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-github="https://github.com/masterunix/Fluttter-Movie-App">
+            <div class="mobile-content-title">🎬 movie_fy</div>
+            <div class="mobile-content-desc">Feature-rich mobile app for movie enthusiasts with reviews and recommendations</div>
+            <div class="mobile-content-tech">Flutter, Dart</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link" data-type="github">GitHub</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-github="Coming Soon">
+            <div class="mobile-content-title">📱 Mobile Dev Project</div>
+            <div class="mobile-content-desc">Cross-platform mobile application with native performance and modern UI</div>
+            <div class="mobile-content-tech">React Native</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link disabled" data-type="github">Coming Soon</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-github="In Development">
+            <div class="mobile-content-title">🎮 WalterWins</div>
+            <div class="mobile-content-desc">In-progress online gaming platform with real-time multiplayer capabilities</div>
+            <div class="mobile-content-tech">Full Stack</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link disabled" data-type="github">In Development</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-github="Private" data-visit="Request Access">
+            <div class="mobile-content-title">🖥️ Personal DIY Server</div>
+            <div class="mobile-content-desc">Custom-built server infrastructure from repurposed hardware with enterprise features</div>
+            <div class="mobile-content-tech">Ubuntu, Nginx</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link disabled" data-type="github">Private</span>
+                <span class="mobile-link disabled" data-type="visit">Request Access</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-github="Coming Soon">
+            <div class="mobile-content-title">🤖 Jarvis 2.0</div>
+            <div class="mobile-content-desc">Advanced AI assistant with natural language processing and smart automation</div>
+            <div class="mobile-content-tech">AI/ML, Python</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link disabled" data-type="github">Coming Soon</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-github="In Development">
+            <div class="mobile-content-title">🧠 AI ML Project</div>
+            <div class="mobile-content-desc">Cutting-edge machine learning solution for data analysis and prediction</div>
+            <div class="mobile-content-tech">TensorFlow, PyTorch</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link disabled" data-type="github">In Development</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-github="Coming Soon">
+            <div class="mobile-content-title">👁️ AI ML Project 2</div>
+            <div class="mobile-content-desc">Advanced neural network implementation for computer vision applications</div>
+            <div class="mobile-content-tech">Deep Learning</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link disabled" data-type="github">Coming Soon</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-github="Coming Soon">
+            <div class="mobile-content-title">🔒 Cyber Security Project</div>
+            <div class="mobile-content-desc">Comprehensive cybersecurity solution with threat detection and prevention</div>
+            <div class="mobile-content-tech">Security Tools</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link disabled" data-type="github">Coming Soon</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-visit="dsa.html">
+            <div class="mobile-content-title">📊 DSA Stats</div>
+            <div class="mobile-content-desc">Explore coding achievements and algorithm mastery statistics</div>
+            <div class="mobile-content-tech">Data Structures</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link" data-type="visit">View Stats</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-visit="skills.html">
+            <div class="mobile-content-title">🎯 Skills & Journey</div>
+            <div class="mobile-content-desc">Discover technical skills, experience timeline, and professional growth</div>
+            <div class="mobile-content-tech">Career Path</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link" data-type="visit">View Skills</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-github="Coming Soon">
+            <div class="mobile-content-title">🚀 Upcoming Project</div>
+            <div class="mobile-content-desc">Exciting new project in planning phase with innovative features</div>
+            <div class="mobile-content-tech">TBD</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link disabled" data-type="github">Coming Soon</span>
+            </div>
+        </div>
+
+        <div class="mobile-content-item" data-github="Coming Soon">
+            <div class="mobile-content-title">✨ Future Innovation</div>
+            <div class="mobile-content-desc">Revolutionary project leveraging emerging technologies and modern frameworks</div>
+            <div class="mobile-content-tech">Next-Gen Tech</div>
+            <div class="mobile-content-links">
+                <span class="mobile-link disabled" data-type="github">Coming Soon</span>
+            </div>
+        </div>
+    </div>
+
+    <div id="copyright">© 2025 Vatsal Goyal. All rights reserved.</div>
+
+    <script src="mobile-notice.js"></script>
     <script src="projects-script.js"></script>
+    <script src="mobile-projects-script.js"></script>
 </body>
 </html>
